# core-rust/core-api-server/src/core_api/generated/models/committed_state_identifier.rs
@@ -1,0 +1,29 @@
+/*
+ * Babylon Core API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+
+
+
+#[derive(Clone, Debug, PartialEq, Default, serde::Serialize, serde::Deserialize)]
+pub struct CommittedStateIdentifier {
+    /// An integer between 0 and 10^13, representing the state version. The state version increments with each transaction, starting at 0 pre-genesis.
+    #[serde(rename = "state_version")]
+    pub state_version: i64,
+}
+
+impl CommittedStateIdentifier {
+    pub fn new(state_version: i64) -> CommittedStateIdentifier {
+        CommittedStateIdentifier {
+            state_version,
+        }
+    }
+}
+
+
