# core-rust/core-api-server/src/core_api/generated/models/fungible_resource_amount_all_of.rs
@@ -14,14 +14,14 @@
 #[derive(Clone, Debug, PartialEq, Default, serde::Serialize, serde::Deserialize)]
 pub struct FungibleResourceAmountAllOf {
     /// The string-encoded decimal subunits of the amount (10^-18) in a signed 256-bit integer. This is string-encoded as it doesn't fit well into common numeric types. 
-    #[serde(rename = "amount_subunits")]
-    pub amount_subunits: String,
+    #[serde(rename = "amount_attos")]
+    pub amount_attos: String,
 }
 
 impl FungibleResourceAmountAllOf {
-    pub fn new(amount_subunits: String) -> FungibleResourceAmountAllOf {
+    pub fn new(amount_attos: String) -> FungibleResourceAmountAllOf {
         FungibleResourceAmountAllOf {
-            amount_subunits,
+            amount_attos,
         }
     }
 }
