# core-rust/core-api-server/src/core_api/generated/models/state_identifier.rs
@@ -1,29 +1,0 @@
-/*
- * Babylon Core API
- *
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: 0.1.0
- * 
- * Generated by: https://openapi-generator.tech
- */
-
-
-
-
-#[derive(Clone, Debug, PartialEq, Default, serde::Serialize, serde::Deserialize)]
-pub struct StateIdentifier {
-    /// The state version increments with each transaction.
-    #[serde(rename = "version")]
-    pub version: u64,
-}
-
-impl StateIdentifier {
-    pub fn new(version: u64) -> StateIdentifier {
-        StateIdentifier {
-            version,
-        }
-    }
-}
-
-
