# core-rust/core-api-server/src/core_api/generated/models/transaction_header.rs
@@ -14,34 +14,34 @@
 #[derive(Clone, Debug, PartialEq, Default, serde::Serialize, serde::Deserialize)]
 pub struct TransactionHeader {
     #[serde(rename = "version")]
-    pub version: u32,
+    pub version: i32,
     #[serde(rename = "network_id")]
-    pub network_id: u32,
-    /// A decimal 64-bit unsigned integer, marking the epoch from which the transaction can be submitted
+    pub network_id: i32,
+    /// An integer between 0 and 10^10, marking the epoch from which the transaction can be submitted
     #[serde(rename = "start_epoch_inclusive")]
-    pub start_epoch_inclusive: u64,
-    /// A decimal 64-bit unsigned integer, marking the epoch from which the transaction will no longer be valid, and be rejected
+    pub start_epoch_inclusive: i64,
+    /// An integer between 0 and 10^10, marking the epoch from which the transaction will no longer be valid, and be rejected
     #[serde(rename = "end_epoch_exclusive")]
-    pub end_epoch_exclusive: u64,
-    /// A decimal 64-bit unsigned integer, chosen to be unique to allow replay of transaction intents
+    pub end_epoch_exclusive: i64,
+    /// A decimal-string-encoded integer between 0 and 2^64 - 1, chosen to be unique to allow replay of transaction intents
     #[serde(rename = "nonce")]
-    pub nonce: u64,
+    pub nonce: String,
     /// A hex-encoded public key of a notary
     #[serde(rename = "notary_public_key")]
     pub notary_public_key: String,
     /// Specifies whether the notary's signature should be included in transaction signers list
     #[serde(rename = "notary_as_signatory")]
     pub notary_as_signatory: bool,
-    /// Maximum number of cost units available for transaction execution. A decimal 32-bit unsigned integer.
+    /// An integer between 0 and 2^32 - 1, giving the maximum number of cost units available for transaction execution.
     #[serde(rename = "cost_unit_limit")]
-    pub cost_unit_limit: String,
-    /// Specifies the validator tip. A decimal 32-bit unsigned integer, representing the percentage amount (a value of \"1\" corresponds to 1%).
+    pub cost_unit_limit: i64,
+    /// An integer between 0 and 2^32 - 1, giving the validator tip as a percentage amount. A value of \"1\" corresponds to 1% of the fee.
     #[serde(rename = "tip_percentage")]
-    pub tip_percentage: String,
+    pub tip_percentage: i64,
 }
 
 impl TransactionHeader {
-    pub fn new(version: u32, network_id: u32, start_epoch_inclusive: u64, end_epoch_exclusive: u64, nonce: u64, notary_public_key: String, notary_as_signatory: bool, cost_unit_limit: String, tip_percentage: String) -> TransactionHeader {
+    pub fn new(version: i32, network_id: i32, start_epoch_inclusive: i64, end_epoch_exclusive: i64, nonce: String, notary_public_key: String, notary_as_signatory: bool, cost_unit_limit: i64, tip_percentage: i64) -> TransactionHeader {
         TransactionHeader {
             version,
             network_id,
